--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <!--Nav Bar Start-->
     <div class="container">
-        <div class="row">
+        <div style ="padding-top: 2.5%;"class="row">
             <div class="col-4">
-                <img class="Size logo" src="/assets/images for use on website/Logo.svg" alt="Logo top left">
+                <img style="height: auto; width: 15%;" src="/assets/images for use on website/Logo.svg" alt="Logo top left">
             </div>
             <div class="col-1">COOKWARE</div>
             <div class="col-1">BAKEWARE</div>
