--- a/index.html
+++ b/index.html
@@ -1,27 +1,91 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cookware Website</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/styles.css">
+</head>
 
-<!--Nav Bar Start-->
-    <div class="container">
-        <div style ="padding-top: 2.5%;"class="row">
-            <div class="col-4">
-                <img style="height: auto; width: 15%;" src="/assets/images for use on website/Logo.svg" alt="Logo top left">
-            </div>
-            <div class="col-1">COOKWARE</div>
-            <div class="col-1">BAKEWARE</div>
-            <div class="col-1">ACCESSORI</div>
-            <div class="col-1">SALE</div>
-            <div class="col-4"></div>
+<body>
+
+    <!--Nav Bar Start-->
+
+
+    <div style="padding-top: 2.5%;" class="row">
+        <div class="col-4">
+            <img style="height: auto; width: 15%; margin-left: 100px;" src="/assets/Logo.svg" alt="Logo top left">
+        </div>
+        <div class="col-1 d-flex justify-content-center align-items-center">COOKWARE</div>
+        <div class="col-1 d-flex justify-content-center align-items-center">BAKEWARE</div>
+        <div class="col-1 d-flex justify-content-center align-items-center">ACCESSORIES</div>
+        <div class="col-1 d-flex justify-content-between align-items-center">SALE</div>
+        <div class="col-4"></div>
+    </div>
+
+    <div>
+        <img class="hero" src="/assets/hero.jpg" alt="Hero image">
+        <h1 class="headerhero" style="margin-left: 120px; margin-top: -400px;">Cookware Built To Last</h1>
+    </div>
+
+
+    <div class="row" style="background-color: #1e2c20; margin: 0; padding: 20px 0;">
+        <h2 class="d-flex justify-content-center" style="color: white;"> Sale $10 off when you spend $150 </h2>
+    </div>
+
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1 class="d-flex justify-content-center align-items-center">Start Cooking</h1>
+    <br>
+
+
+    <div class="cooking">
+        <div class="castiron">
+            <img src="/assets/StartCooking1.jpeg"
+                style="width:379px; height:370px;border-radius:15px; object-fit:cover;" alt="Cast iron pot">
+        </div>
+        <div class="stock">
+            <img src="/assets/StartCooking2.jpeg"
+                style="width:379px; height:370px;border-radius:15px; object-fit:cover;" alt="Stock Pot">
+        </div>
+        <div class="sauce">
+            <img src="/assets/StartCooking3.jpeg"
+                style="width:379px; height:370px;border-radius:15px; object-fit:cover;" alt="Sauce Pan">
+        </div>
+        <div class="accessories">
+            <img src="/assets/StartCooking4.jpeg"
+                style="width:379px; height:370px;border-radius:15px; object-fit:cover;" alt="Accessories">
         </div>
     </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1 class="d-flex justify-content-center align-items-center">New Arrivals</h1>
+
+    <div class="potgrid">
+        <div class="pot">
+            <img class="potsize" src="/assets/NewArrivals1.jpg" alt="cooking pot">
+        </div>
+        <div class="pot2">
+            <img class="potsize2" src="/assets/NewArrivals2.jpg" alt="cooking pot 2">
+        </div>
+        <div class="collection">
+        <h1>Fall Collection</h1>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
