--- a/index.html
+++ b/index.html
@@ -15,34 +15,35 @@
     <!--Nav Bar Start-->
 
 
-    <div style="padding-top: 2.5%;" class="row">
-        <div class="col-4">
-            <img style="height: auto; width: 15%; margin-left: 100px;" src="/assets/Logo.svg" alt="Logo top left">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a href=""><img class="logo mt-2 mb-2" src="./assets/Logo.svg" alt="logo" /></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav mt-2 mb-2">
+                    <a class="nav-link navt" href="#">Cookware</a>
+                    <a class="nav-link navt" href="#">Bakeware</a>
+                    <a class="nav-link navt" href="#">Accessories</a>
+                    <a class="nav-link navsale" href="#">Sale</a>
+                </div>
+            </div>
         </div>
-        <div class="col-1 d-flex justify-content-center align-items-center">COOKWARE</div>
-        <div class="col-1 d-flex justify-content-center align-items-center">BAKEWARE</div>
-        <div class="col-1 d-flex justify-content-center align-items-center">ACCESSORIES</div>
-        <div class="col-1 d-flex justify-content-between align-items-center">SALE</div>
-        <div class="col-4"></div>
-    </div>
+    </nav>
 
-    <div>
-        <img class="hero" src="/assets/hero.jpg" alt="Hero image">
-        <h1 class="headerhero" style="margin-left: 120px; margin-top: -400px;">Cookware Built To Last</h1>
-    </div>
-
-
-    <div class="row" style="background-color: #1e2c20; margin: 0; padding: 20px 0;">
-        <h2 class="d-flex justify-content-center" style="color: white;"> Sale $10 off when you spend $150 </h2>
-    </div>
-
-
+    <div class="imageGrid"> 
+        <div class="hero"></div>
+        <div class="herotextbox"><h1 class="herotext">Cookware Built To Last</h1></div>
+         <div class="gText" style="background-color: #1E2C20;">
+           <h1 class="d-flex justify-content-center" style="color: white; padding: 20px;">Sale $10 off when you spend $150</h1>
+          </div>
+       </div>
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <h1 class="d-flex justify-content-center align-items-center">Start Cooking</h1>
+    <h1 class="textfont d-flex justify-content-center align-items-center">Start Cooking</h1>
     <br>
 
 
@@ -50,18 +51,26 @@
         <div class="castiron">
             <img src="/assets/StartCooking1.jpeg"
                 style="width:379px; height:370px;border-radius:15px; object-fit:cover;" alt="Cast iron pot">
+                <h1></h1>
+                <h2>Cast Iron Pot</h2>
         </div>
         <div class="stock">
             <img src="/assets/StartCooking2.jpeg"
                 style="width:379px; height:370px;border-radius:15px; object-fit:cover;" alt="Stock Pot">
+                <h1></h1>
+                <h2>Stock Pot</h2>
         </div>
         <div class="sauce">
             <img src="/assets/StartCooking3.jpeg"
                 style="width:379px; height:370px;border-radius:15px; object-fit:cover;" alt="Sauce Pan">
+                <h1></h1>
+                <h2>Sauce Pan</h2>
         </div>
         <div class="accessories">
             <img src="/assets/StartCooking4.jpeg"
                 style="width:379px; height:370px;border-radius:15px; object-fit:cover;" alt="Accessories">
+                <h1></h1>
+                <h2>Accessories</h2>
         </div>
     </div>
 
@@ -69,7 +78,8 @@
     <br>
     <br>
     <br>
-    <h1 class="d-flex justify-content-center align-items-center">New Arrivals</h1>
+    <h1 class="textfont d-flex justify-content-center align-items-center">New Arrivals</h1>
+    <br>
 
     <div class="potgrid">
         <div class="pot">
@@ -80,12 +90,91 @@
         </div>
         <div class="collection">
         <h1>Fall Collection</h1>
+        <h6>Our 2023 Fall Collection just came out with beautiful autumn color cookware.</h6>
+        <br>
+        <h6>Color: Apple Cinnamon</h6>
+        <img class="screenshot"src="/assets/Screenshot 2024-11-14 at 12.40.21 PM.png" alt="display bar">
+        </div>
+        <div class="wok">
+            <h1>Nonstick Wok 14 inch</h1>
+            <h6>The nonstick wok is one our most popular cookware</h6>
         </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1 class="textfont d-flex justify-content-center align-items-center">Best Sellers</h1>
+<br>
+    <div class="StockPotGrid">
+        <div class= "firstSeller">
+            <div class="SellerCard">
+                <img class="sellImg" src="/assets/BestSeller1.jpg" alt="stock pot first image">
+                <h1>Stock pot</h1>
+                <p>
+                    Our fall bakeware is back again with warm fall colors. Check our our
+                   fall line of bakeware from fall colored pots to baking pans.
+              </p>
+              <button>SHOP NOW</button>
+            </div>
+        </div>
+        <div class= "secondSeller">
+            <div class="SellerCard">
+                <img class="sellImg" src="/assets/BestSeller2.jpg" alt="Stock pot Second image">
+                <h1>Stock pot</h1>
+                <p>
+                    The Stock Pot is a cookware that is revollutionizing the way you cook! With its innovative design and advanced materials. The Stock Pot is the perfect choice for any kitchen. Its unique combination of ceramic and aluminum ensures that your food cooks evenly and quickly, while its non-stick coating ensures that nothing sticks to the surface. Whether you're cooking for one of the whole family, the Stock Pot is the perfect choice!
+              </p>
+              <button>SHOP NOW</button>
+            </div>
+        </div>
+        <div class= "thirdSeller">
+            <div class="SellerCard">
+                <img class="sellImg" src="/assets/BestSeller3.jpg" alt="Sauce pan third image">
+                <h1>Sauce Pan</h1>
+                <p>
+                    The Sauce Pan is the perfectr cookware for making a variety of sauces, stews, soups, and more.  Its stainless steel construction ensrues even heat distribution for better and faster cooking. No matter what you're cooking, you can count on the Sauce Pan to help you cook like a pro.
+              </p>
+              <button>SHOP NOW</button>
+            </div>
+        </div>
+        </div>
 
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1 class="textfont d-flex justify-content-center align-items-center">Reviews</h1>
+        <br>
+
+       <div class="bottomgrid">
+        <div class="leftImage">
+            <div class="leftImageoverlay">
+                <h1 style="display: flex; justify-content: center;">Wok Star!</h1>
+                <p style="display: flex; justify-content: center;">I love cooking using the cast iron wok for everyday family meals. With the wok it makes the food I make turn into restaurant quality meals. I bought this wok for my parents and also siblings!</p>
+                <div style="display: flex; justify-content: center;">David Jones</div>
+            </div>
+        </div>
+        <div class="centerImage">
+            <div class="centerImageoverlay">
+                <h1 style="display: flex; justify-content: center;">Built to Last</h1>
+                <p style="display: flex; justify-content: center;">Bought the cast iron pot and it lasted longer than other brands I bought. Not only are the pots durable but the colors of the pots are so nice!</p>
+                <div style="display: flex; justify-content: center;">Danielle Johnson</div>
+            </div>
+        </div>
+        <div class="rightImage">
+            <div class="rightImageoverlay">
+                <h1 style="display: flex; justify-content: center;">Best Cookware!</h1>
+                <p style="display: flex; justify-content: center;">I love all the cookware.  I just bought my 4th pan and love it so much! I love the color of the pot and how durable the pots are. I've recommended the cast iron pot to all my friends and family.</p>
+                <div style="display: flex; justify-content: center;">Michelle</div>
+            </div>
+        </div>
+       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
