--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav mt-2 mb-2">
-                    <a class="nav-link navt" href="#">Cookware</a>
-                    <a class="nav-link navt" href="#">Bakeware</a>
-                    <a class="nav-link navt" href="#">Accessories</a>
-                    <a class="nav-link navsale" href="#">Sale</a>
+                    <a class="nav-link navt light" href="#">Cookware</a>
+                    <a class="nav-link navt light" href="#">Bakeware</a>
+                    <a class="nav-link navt light" href="#">Accessories</a>
+                    <a class="nav-link navsale light" href="#">Sale</a>
                 </div>
             </div>
         </div>
@@ -35,15 +35,15 @@
 
     <div class="imageGrid"> 
         <div class="hero"></div>
-        <div class="herotextbox"><h1 class="herotext">Cookware Built To Last</h1></div>
+        <div class="herotextbox"><h1 class="herotext roboto">Cookware Built To Last</h1></div>
          <div class="gText" style="background-color: #1E2C20;">
-           <h1 class="d-flex justify-content-center" style="color: white; padding: 20px;">Sale $10 off when you spend $150</h1>
+           <h1 class="d-flex justify-content-center light" style="color: white; padding: 20px;">Sale $10 off when you spend $150</h1>
           </div>
        </div>
     <br>
     <br>
     <br>
-    <h1 class="textfont d-flex justify-content-center align-items-center">Start Cooking</h1>
+    <h1 class="textfont d-flex justify-content-center align-items-center bold">Start Cooking</h1>
     <br>
 
 
@@ -78,7 +78,7 @@
     <br>
     <br>
     <br>
-    <h1 class="textfont d-flex justify-content-center align-items-center">New Arrivals</h1>
+    <h1 class="textfont d-flex justify-content-center align-items-center bold">New Arrivals</h1>
     <br>
 
     <div class="potgrid">
@@ -106,38 +106,44 @@
     <br>
     <br>
     <br>
-    <h1 class="textfont d-flex justify-content-center align-items-center">Best Sellers</h1>
+    <h1 class="textfont d-flex justify-content-center align-items-center bold">Best Sellers</h1>
 <br>
     <div class="StockPotGrid">
         <div class= "firstSeller">
             <div class="SellerCard">
                 <img class="sellImg" src="/assets/BestSeller1.jpg" alt="stock pot first image">
                 <h1>Stock pot</h1>
-                <p>
+                <p class="light">
                     Our fall bakeware is back again with warm fall colors. Check our our
                    fall line of bakeware from fall colored pots to baking pans.
               </p>
-              <button>SHOP NOW</button>
+              <button class="Shop">SHOP NOW</button>
             </div>
         </div>
         <div class= "secondSeller">
             <div class="SellerCard">
                 <img class="sellImg" src="/assets/BestSeller2.jpg" alt="Stock pot Second image">
                 <h1>Stock pot</h1>
-                <p>
+                <p class="light">
                     The Stock Pot is a cookware that is revollutionizing the way you cook! With its innovative design and advanced materials. The Stock Pot is the perfect choice for any kitchen. Its unique combination of ceramic and aluminum ensures that your food cooks evenly and quickly, while its non-stick coating ensures that nothing sticks to the surface. Whether you're cooking for one of the whole family, the Stock Pot is the perfect choice!
               </p>
-              <button>SHOP NOW</button>
+              <button class="Shop">SHOP NOW</button>
             </div>
         </div>
         <div class= "thirdSeller">
             <div class="SellerCard">
                 <img class="sellImg" src="/assets/BestSeller3.jpg" alt="Sauce pan third image">
                 <h1>Sauce Pan</h1>
-                <p>
+                <p class="light">
                     The Sauce Pan is the perfectr cookware for making a variety of sauces, stews, soups, and more.  Its stainless steel construction ensrues even heat distribution for better and faster cooking. No matter what you're cooking, you can count on the Sauce Pan to help you cook like a pro.
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
               </p>
-              <button>SHOP NOW</button>
+              <button class="Shop" >SHOP NOW</button>
             </div>
         </div>
         </div>
@@ -173,6 +179,49 @@
             </div>
         </div>
        </div>
+
+       <div class="Footer">
+        <div class="leftSide">
+          <h5 style="color: white;">ABOUT OUR HOME</h5>
+          <ul style="color: white; margin: 0; padding: 0;">
+              <p>ABOUT US</p>
+              <p>CAREERS</p>
+              <p>PRIVACY</p>
+              <p>MEDIA RELATIONS</p>
+          </ul>
+        </div>
+  
+        <div class="FooterCook">
+          <h5 style="color: white;">PRODUCTS</h5>
+          <ul style="color: white; margin: 0; padding: 0;">
+            <p>COOKWARE</p>
+            <p>BAKEWARE</p>
+            <p>BEST SELLERS</p>
+            <p>ACCESSORIES</p>
+  
+          </ul>
+        </div>
+  
+        <div class="FooterContact">
+          <h5 style="color: white;">CUSTOMER SERVICE</h5>
+          <ul style="color: white; margin: 0; padding: 0;">
+              <p>CONTACT US</p>
+              <p>ORDER STATUS</p>
+              <p>RETURNS & EXCHANGES</p>
+              <p>FAQS</p>
+          </ul>
+        </div>
+  
+        <div class="FooterSubscribe">
+          <ul style="color: white; margin: 0; padding: 0;">
+              <p>Subscribe to our newsletter to be the first to know about new products and special events.</p>
+              <input class="email" placeholder="Enter email address">
+              <button class="Subscribe">SUBSCRIBE</button>
+             
+          </ul>
+        </div>
+  
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
